@@ -62,6 +62,8 @@ Please visit http://aegisub.net to download latest version
 - Scrollbar and sliders in audio box can no longer receive focus. (Pomyk)
 - Select lines dialog now has an option on how to deal with comment lines. (Pomyk)
 - Last folder for all the file selection dialogs are now remembered in config.dat. (Pomyk)
+- Audio current play position cursor will now always be visible. (AMZ)
+- Removed video frame/subtitles time sync controls from the grid context menu.
 
 
 = 1.09 beta - 2006.01.16 ===========================
